Header on mobile fixed

--- a/style.css
+++ b/style.css
@@ -123,5 +123,21 @@ del {
     color: red;
 }
 
+@media only screen and (max-width: 600px) { 
+    del {
+        display: inline-block;
+    }
+
+    .menu {
+        font-size: 1rem;
+    }
+
+    .logo {
+        width: 4rem;
+        height: 4rem;
+    }
+
+}
+
 
 
